@@ -1,5 +1,6 @@
 package com.simplecity.amp_library.tagger;
 
+import android.annotation.SuppressLint;
 import android.app.Activity;
 import android.app.Dialog;
 import android.app.ProgressDialog;
@@ -18,12 +19,10 @@ import android.view.LayoutInflater;
 import android.view.View;
 import android.widget.EditText;
 import android.widget.FrameLayout;
-import android.widget.ScrollView;
 import android.widget.Toast;
 
 import com.afollestad.materialdialogs.DialogAction;
 import com.afollestad.materialdialogs.MaterialDialog;
-import com.annimon.stream.Collectors;
 import com.annimon.stream.Stream;
 import com.simplecity.amp_library.R;
 import com.simplecity.amp_library.ShuttleApplication;
@@ -32,9 +31,8 @@ import com.simplecity.amp_library.model.AlbumArtist;
 import com.simplecity.amp_library.model.Song;
 import com.simplecity.amp_library.utils.CustomMediaScanner;
 import com.simplecity.amp_library.utils.DialogUtils;
+import com.simplecity.amp_library.utils.LogUtils;
 import com.simplecity.amp_library.utils.SettingsManager;
-import com.simplecity.amp_library.utils.ShuttleUtils;
-import com.simplecity.amp_library.utils.ThemeUtils;
 
 import org.jaudiotagger.audio.AudioFile;
 import org.jaudiotagger.audio.AudioFileIO;
@@ -90,16 +88,10 @@ public class TaggerDialog extends DialogFragment {
     private EditText lyricsEditText;
     private EditText commentEditText;
 
-    private TextInputLayout albumArtistInputLayout;
-    private TextInputLayout artistInputLayout;
     private TextInputLayout albumInputLayout;
     private TextInputLayout titleInputLayout;
-    private TextInputLayout genreInputLayout;
-    private TextInputLayout yearInputLayout;
     private TextInputLayout trackInputLayout;
-    private TextInputLayout trackTotalInputLayout;
     private TextInputLayout discInputLayout;
-    private TextInputLayout discTotalInputLayout;
     private TextInputLayout lyricsInputLayout;
     private TextInputLayout commentInputLayout;
 
@@ -138,7 +130,7 @@ public class TaggerDialog extends DialogFragment {
 
             originalSongPaths = Stream.of(albumArtist.albums)
                     .flatMap(value -> Stream.of(value.paths))
-                    .collect(Collectors.toList());
+                    .toList();
             showAlbum = false;
             showTrack = false;
         } else if (model instanceof Album) {
@@ -161,6 +153,7 @@ public class TaggerDialog extends DialogFragment {
     @Override
     public Dialog onCreateDialog(Bundle savedInstanceState) {
 
+        @SuppressLint("InflateParams")
         View customView = LayoutInflater.from(getContext()).inflate(R.layout.dialog_tagger, null, false);
 
         setupViews(customView);
@@ -186,56 +179,35 @@ public class TaggerDialog extends DialogFragment {
 
     private void setupViews(View rootView) {
 
-        ScrollView scrollView = (ScrollView) rootView.findViewById(R.id.scrollview);
-        ThemeUtils.themeScrollView(scrollView);
-
-        titleEditText = (EditText) rootView.findViewById(R.id.new_track_name);
+        titleEditText = rootView.findViewById(R.id.new_track_name);
         titleInputLayout = getParent(titleEditText);
-        ThemeUtils.themeEditText(titleEditText);
 
-        albumEditText = (EditText) rootView.findViewById(R.id.new_album_name);
+        albumEditText = rootView.findViewById(R.id.new_album_name);
         albumInputLayout = getParent(albumEditText);
-        ThemeUtils.themeEditText(albumEditText);
 
-        artistEditText = (EditText) rootView.findViewById(R.id.new_artist_name);
-        artistInputLayout = getParent(artistEditText);
-        ThemeUtils.themeEditText(artistEditText);
+        artistEditText = rootView.findViewById(R.id.new_artist_name);
 
-        albumArtistEditText = (EditText) rootView.findViewById(R.id.new_album_artist_name);
-        albumArtistInputLayout = getParent(albumArtistEditText);
-        ThemeUtils.themeEditText(albumArtistEditText);
+        albumArtistEditText = rootView.findViewById(R.id.new_album_artist_name);
 
-        genreEditText = (EditText) rootView.findViewById(R.id.new_genre_name);
-        genreInputLayout = getParent(genreEditText);
-        ThemeUtils.themeEditText(genreEditText);
+        genreEditText = rootView.findViewById(R.id.new_genre_name);
 
-        yearEditText = (EditText) rootView.findViewById(R.id.new_year_number);
-        yearInputLayout = getParent(yearEditText);
-        ThemeUtils.themeEditText(yearEditText);
+        yearEditText = rootView.findViewById(R.id.new_year_number);
 
-        trackEditText = (EditText) rootView.findViewById(R.id.new_track_number);
+        trackEditText = rootView.findViewById(R.id.new_track_number);
         trackInputLayout = getParent(trackEditText);
-        ThemeUtils.themeEditText(trackEditText);
 
-        trackTotalEditText = (EditText) rootView.findViewById(R.id.new_track_total);
-        trackTotalInputLayout = getParent(trackTotalEditText);
-        ThemeUtils.themeEditText(trackTotalEditText);
+        trackTotalEditText = rootView.findViewById(R.id.new_track_total);
 
-        discEditText = (EditText) rootView.findViewById(R.id.new_disc_number);
+        discEditText = rootView.findViewById(R.id.new_disc_number);
         discInputLayout = getParent(discEditText);
-        ThemeUtils.themeEditText(discEditText);
 
-        discTotalEditText = (EditText) rootView.findViewById(R.id.new_disc_total);
-        discTotalInputLayout = getParent(discTotalEditText);
-        ThemeUtils.themeEditText(discTotalEditText);
+        discTotalEditText = rootView.findViewById(R.id.new_disc_total);
 
-        lyricsEditText = (EditText) rootView.findViewById(R.id.new_lyrics);
+        lyricsEditText = rootView.findViewById(R.id.new_lyrics);
         lyricsInputLayout = getParent(lyricsEditText);
-        ThemeUtils.themeEditText(lyricsEditText);
 
-        commentEditText = (EditText) rootView.findViewById(R.id.new_comment);
+        commentEditText = rootView.findViewById(R.id.new_comment);
         commentInputLayout = getParent(commentEditText);
-        ThemeUtils.themeEditText(commentEditText);
 
         if (albumArtist != null || album != null) {
             titleInputLayout.setVisibility(View.GONE);
@@ -287,10 +259,26 @@ public class TaggerDialog extends DialogFragment {
             } catch (UnsupportedOperationException ignored) {
 
             }
-            disc = tag.getFirst(FieldKey.DISC_NO);
-            discTotal = tag.getFirst(FieldKey.DISC_TOTAL);
-            lyrics = tag.getFirst(FieldKey.LYRICS);
-            comment = tag.getFirst(FieldKey.COMMENT);
+            try {
+                disc = tag.getFirst(FieldKey.DISC_NO);
+            } catch (UnsupportedOperationException ignored) {
+
+            }
+            try {
+                discTotal = tag.getFirst(FieldKey.DISC_TOTAL);
+            } catch (UnsupportedOperationException ignored) {
+
+            }
+            try {
+                lyrics = tag.getFirst(FieldKey.LYRICS);
+            } catch (UnsupportedOperationException ignored) {
+
+            }
+            try {
+                comment = tag.getFirst(FieldKey.COMMENT);
+            } catch (UnsupportedOperationException ignored) {
+
+            }
 
         } catch (IOException | InvalidAudioFrameException | TagException | ReadOnlyFileException | CannotReadException e) {
             Log.e(TAG, "Failed to read tags. " + e.toString());
@@ -356,7 +344,14 @@ public class TaggerDialog extends DialogFragment {
         CheckDocumentPermissionsTask task = new CheckDocumentPermissionsTask(
                 originalSongPaths, documentFiles, hasPermission -> {
 
-            progressDialog.dismiss();
+            if (isResumed() && progressDialog.isShowing()) {
+                progressDialog.dismiss();
+            }
+
+            if (!isResumed() || getContext() == null) {
+                LogUtils.logException(TAG, "Save tags returning early.. Context null or dialog not resumed.", null);
+                return;
+            }
 
             if (hasPermission) {
 
@@ -386,14 +381,7 @@ public class TaggerDialog extends DialogFragment {
 
                         if (getContext() != null && isResumed()) {
                             saveProgressDialog.dismiss();
-
-                            if (ShuttleUtils.hasKitKat() && !ShuttleUtils.hasLollipop()) {
-                                Toast.makeText(getContext(), R.string.tag_error_kitkat, Toast.LENGTH_LONG).show();
-                            } else if (ShuttleUtils.hasLollipop()) {
-                                Toast.makeText(getContext(), R.string.tag_error_lollipop, Toast.LENGTH_LONG).show();
-                            } else {
-                                Toast.makeText(getContext(), R.string.tag_edit_error, Toast.LENGTH_LONG).show();
-                            }
+                            Toast.makeText(getContext(), R.string.tag_error, Toast.LENGTH_LONG).show();
                             dismiss();
                         }
                     }
@@ -426,13 +414,11 @@ public class TaggerDialog extends DialogFragment {
                 taggerTask.execute();
             } else {
                 TaggerUtils.showChooseDocumentDialog(getContext(), (dialog1, which1) -> {
-                    if (ShuttleUtils.hasLollipop()) {
-                        Intent intent = new Intent(Intent.ACTION_OPEN_DOCUMENT_TREE);
-                        if (intent.resolveActivity(ShuttleApplication.getInstance().getPackageManager()) != null) {
-                            getActivity().startActivityForResult(intent, DOCUMENT_TREE_REQUEST_CODE);
-                        } else {
-                            Toast.makeText(getContext(), R.string.R_string_toast_no_document_provider, Toast.LENGTH_LONG).show();
-                        }
+                    Intent intent = new Intent(Intent.ACTION_OPEN_DOCUMENT_TREE);
+                    if (intent.resolveActivity(ShuttleApplication.getInstance().getPackageManager()) != null) {
+                        this.startActivityForResult(intent, DOCUMENT_TREE_REQUEST_CODE);
+                    } else {
+                        Toast.makeText(getContext(), R.string.R_string_toast_no_document_provider, Toast.LENGTH_LONG).show();
                     }
                 }, hasCheckedPermissions);
                 hasCheckedPermissions = true;
@@ -444,17 +430,15 @@ public class TaggerDialog extends DialogFragment {
     @Override
     public void onActivityResult(int requestCode, int resultCode, Intent data) {
         super.onActivityResult(requestCode, resultCode, data);
-        if (ShuttleUtils.hasKitKat()) {
-            switch (requestCode) {
-                case DOCUMENT_TREE_REQUEST_CODE:
-                    if (resultCode == Activity.RESULT_OK) {
-                        Uri treeUri = data.getData();
-                        ShuttleApplication.getInstance().getContentResolver().takePersistableUriPermission(treeUri, Intent.FLAG_GRANT_READ_URI_PERMISSION | Intent.FLAG_GRANT_WRITE_URI_PERMISSION);
-                        SettingsManager.getInstance().setDocumentTreeUri(data.getData().toString());
-                        saveTags();
-                    }
-                    break;
-            }
+        switch (requestCode) {
+            case DOCUMENT_TREE_REQUEST_CODE:
+                if (resultCode == Activity.RESULT_OK) {
+                    Uri treeUri = data.getData();
+                    ShuttleApplication.getInstance().getContentResolver().takePersistableUriPermission(treeUri, Intent.FLAG_GRANT_READ_URI_PERMISSION | Intent.FLAG_GRANT_WRITE_URI_PERMISSION);
+                    SettingsManager.getInstance().setDocumentTreeUri(data.getData().toString());
+                    saveTags();
+                }
+                break;
         }
     }
 
